# roblox-cup-game-automator

./: .gitignore  CupGuard-win.spec  CupGuard.spec  LICENSE  README.md  pyproject.toml  run.sh
.github/workflows/: release.yml
cup_guard/: cli.py  core.py  crash_report.py  engine.py  hotkey.py  overlay.py  paths.py  pyi_rth_crash.py  pyi_rth_tkinter.py
native/: Package.swift
native/.build/: build.db  plugin-tools.yaml
native/.build/arm64-apple-macosx/release/: CupGuard  description.json  plugin-tools-description.json
native/.build/arm64-apple-macosx/release/CupGuard.build/: CupGuard.d  output-file-map.json  sources
native/.build/arm64-apple-macosx/release/CupGuard.dSYM/Contents/: Info.plist
native/.build/arm64-apple-macosx/release/CupGuard.product/: Objects.LinkFileList
native/.build/arm64-apple-macosx/release/ModuleCache/: SwiftUI-3OGBWVX9276JL.swiftmodule
native/.build/arm64-apple-macosx/release/ModuleCache/264VZ2OITLVAV/: Accessibility-RCJSN2GG3RAR.pcm  ApplicationServices-3NXEUUZF9JJBD.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CUPS-1HLHMKUB322XA.pcm  ColorSync-3EIM4S8RXNRVI.pcm  CoreData-1KHK1L2CYC2N6.pcm  (+51 more)
native/.build/arm64-apple-macosx/release/Modules/: CupGuard.swiftdoc  CupGuard.swiftmodule  CupGuard.swiftsourceinfo
native/Sources/CupGuard/: AppDelegate.swift  Config.swift  CupDetection.swift  InputServices.swift  MonitorEngine.swift  OverlayWindowController.swift  Permissions.swift  ScreenCapture.swift
native/scripts/: build-app.sh
scripts/: install-from-source.sh  package-macos.sh
share/: Launch Cup Guard (debug).command  README.txt
(+2 files in other folders)
