[project]
name = "cup-guard"
version = "1.1.0"
description = "Overlay app that detects the Roblox red cup and auto-presses E/Q"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.0",
    "mss>=10.0.0",
    "numpy>=2.0.0",
    "pillow>=11.0.0",
    "pynput>=1.8.0",
]

[project.scripts]
cup-guard = "cup_guard.cli:main"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cup_guard"]

[tool.hatch.build.targets.wheel.force-include]
"cup_guard/assets" = "cup_guard/assets"
